--- a/Making.css
+++ b/Making.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
-    padding-bottom : 20px;
+    padding-bottom: 20px;
 }
 
 a {
@@ -41,307 +41,234 @@ a:active {
     border: none;
     border-bottom: solid 1px rgb(255, 255, 255);
     outline-style: none;
-
 }
 
 #title::placeholder {
     color: rgb(255, 255, 255);
 }
 
-/* section */
-.main_container {
-    text-align: center;
-}
 
-.voca_container {
-    display: inline-flex;
-}
-
-ul {
-    list-style: none;
-}
-
-/* 화면 너비 0 ~ 2560px */
-@media (max-width:2570px) {
-    .main {
-        display: flex;
-        padding-top:100px;
-    }
-
-    #header_container {
-        font-size: 1.5rem;
-    }
-
-    #title {
-        font-size: 2rem;
-    }
-
-    p {
-        font-size : 30px;
-    }
-
-    span {
-        font-size : 20px;
-    }
-
-    .voca_container input {
-        font-size:25px;
-        margin-bottom : 30px;
-        height: 2em;
-    }
-
-    .voca_field input {
-        width : 600px;
-    }
-
-    .mean_field input {
-        width : 39em;
-    }
-
-    #save_btn {
-        bottom : 30px;
-        width: 250px;
-        height: 60px;
-        font-size: 25px;
-    }
-
-    .addMinus{
-        bottom: 50px;
-        left: 780px;
-    }
-
-    .add {
-        font-size:30px;
-        width:45px;
-	    height:45px;
-        line-height:45px;
-    }
-
-    .minus {
-        font-size:30px;
-	    width:45px;
-	    height:45px;
-        line-height:45px;
-    }
-
-}
-
-/* 화면 너비 0 ~ 2000px */
-@media (max-width:2000px) {
-    .main {
-        display: flex;
-        padding-top:50px;
-    }
-
-    #header_container {
-        font-size: 1.5rem;
-    }
-
-    #title {
-        font-size: 2rem;
-    }
-
-    p {
-        font-size : 25px;
-    }
-
-    span {
-        font-size : 20px;
-    }
-
-    .voca_container input {
-        font-size:25px;
-        margin-bottom : 30px;
-        height: 2em;
-    }
-
-    .voca_field input {
-        width : 400px;
-    }
-
-    .mean_field input {
-        width : 700px;
-    }
-
-    #save_btn {
-        bottom : 50px;
-        width: 180px;
-        height: 50px;
-        font-size: 20px;
-    }
-
-    .addMinus{
-        bottom: 45px;
-        left: 560px;
-    }
-
-    .add {
-        font-size:25px;
-        width:30px;
-	    height:30px;
-        line-height:30px;
-    }
-
-    .minus {
-        font-size:25px;
-        width:30px;
-	    height:30px;
-        line-height:30px;
-    }
-}
-
-/* 화면 너비 0 ~ 1200px */
-@media (max-width:1220px) {
-    .main {
-        display: flex;
-        padding-top:50px;
-    }
-
-    #header_container {
-        font-size: 1rem;
-    }
-
-    #title {
-        font-size: 1.5rem;
-    }
-
-    p {
-        font-size : 20px;
-    }
-
-    span {
-        font-size : 18px;
-    }
-
-    .voca_container input {
-        font-size:25px;
-        margin-bottom : 30px;
-        height: 2em;
-    }
-
-    .voca_field input {
-        width : 230px;
-    }
-
-    .mean_field input {
-        width : 400px;
-    }
-
-    #save_btn {
-        bottom : 30px;
-        width: 160px;
-        height: 45px;
-        font-size: 20px;
-    }
-
-    .addMinus{
-        bottom: 43px;
-        left: 330px;
-    }
-
-    .add {
-        font-size:20px;
-        width:25px;
-	    height:25px;
-        line-height:25px;
-    }
-
-    .minus {
-        font-size:20px;
-        width:25px;
-	    height:25px;
-        line-height:25px;
-    }
-}
-
-/* 화면 너비 0 ~ 768px */
-@media (max-width : 780px) { 
-    .main {
-        display: flex;
-        padding-top:50px;
-    }
-
-    #header_container {
-        font-size: 1rem;
-    }
-
-    #title {
-        font-size: 1.3rem;
-    }
-
-    p {
-        font-size : 18px;
-    }
-
-    span {
-        font-size : 15px;
-    }
-
-    .voca_container input {
-        font-size:20px;
-        margin-bottom : 30px;
-        height: 2em;
-    }
-
-    .voca_field input {
-        width : 140px;
-    }
-
-    .mean_field input {
-        width : 220px;
-    }
-
-    #save_btn {
-        bottom : 30px;
-        width: 130px;
-        height: 40px;
-        font-size: 15px;
-    }
-
-    .addMinus{
-        bottom: 40px;
-        left: 200px;
-    }
-
-    .add {
-        font-size:15px;
-        width:20px;
-	    height:20px;
-        line-height:20px;
-    }
-
-    .minus {
-        font-size:15px;
-        width:20px;
-	    height:20px;
-        line-height:20px;
-    }
-}
-
-p {
-    margin-bottom : 15px;
-}
-
-span {
-    padding-right : 5px;
-}
-
-.voca_field p {
-    text-align: left;
-}
-
-.mean_field p {
-    text-align: left;
-}
-
+/* 메인 */
 .btn {
     display: flex;
     justify-content: center;
 }
 
+input {
+    font-size: 20px;
+    padding: 5px 5px;  
+}
+
+span {
+    margin-right: 10px;
+}
+
+.list input[type=text]{
+    margin-left:0px;
+    margin-right:15px;
+}
+
+ul {
+    margin-top: 20px;
+    list-style: none;
+    display: inline-flex;
+    padding-left:10px;
+}
+
+.hidden_text {
+    border: none;
+    outline-style: none;
+}
+
+.addMinus {
+    position: absolute;
+    display: none;
+}
+
+/* 화면 너비 0 ~ 2560px */
+@media (max-width:2570px) {
+    .item1 {
+        font-size: 30px;
+    }
+
+    .small_title {
+        font-size: 30px;
+        margin-bottom: 10px;
+    }
+
+    input {
+        margin-bottom:20px;
+    }
+
+    span {
+        font-size: 20px;
+    }
+    
+    input:nth-of-type(1){
+        width:400px;
+    }
+
+    input:nth-of-type(2){
+        width:600px;
+    }
+
+    .addMinus {
+        right : 760px;
+    }
+
+    #save_btn {
+        font-size: 25px;
+        width: 160px;
+        height: 60px;
+    }
+}
+
+/* 화면 너비 0 ~ 2000px */
+@media (max-width:2000px) {
+    .item1 {
+        font-size : 18px;
+    }
+
+    #title {
+        font-size: 20px;
+    }
+
+    .small_title {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    input {
+        margin-bottom:15px;
+    }
+
+    input:nth-of-type(1){
+        width:300px;
+    }
+
+    input:nth-of-type(2){
+        width:470px;
+    }
+
+    .addMinus {
+        right : 370px;
+    }
+
+    #save_btn {
+        font-size: 20px;
+        width: 130px;
+        height: 40px;
+    }
+}
+
+/* 화면 너비 0 ~ 1200px */
+@media (max-width:1220px) {
+    .item1 {
+        font-size : 18px;
+    }
+
+    #title {
+        font-size: 20px;
+    }
+
+    .small_title {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    input {
+        margin-bottom:15px;
+    }
+
+    input:nth-of-type(1){
+        width:300px;
+    }
+
+    input:nth-of-type(2){
+        width:470px;
+    }
+
+    .addMinus {
+        right : 210px;
+    }
+
+    #save_btn {
+        font-size: 20px;
+        width: 130px;
+        height: 40px;
+    }
+}
+
+
+/* 화면 너비 0 ~ 768px */
+@media (max-width : 780px) {
+    .item1 {
+        font-size : 18px;
+    }
+
+    #title {
+        font-size: 20px;
+    }
+
+    .small_title {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    input {
+        margin-bottom:15px;
+    }
+
+    input:nth-of-type(1){
+        width:200px;
+    }
+
+    input:nth-of-type(2){
+        width:330px;
+    }
+
+    .addMinus {
+        right : 100px;
+    }
+
+    #save_btn {
+        font-size: 20px;
+        width: 130px;
+        height: 40px;
+    }
+}
+
+
+/* 버튼 */
+.add {
+    background-color: #ffffff;
+    border-radius: 100%;
+    border: 2px solid #8f8f8f;
+    display: inline-block;
+    cursor: pointer;
+    color: #8f8f8f;
+    font-size: 20px;
+    padding-left: 7px;
+    padding-right: 7px;
+    text-decoration: none;
+}
+
+.minus {
+    background-color: #ffffff;
+    border-radius: 100%;
+    border: 2px solid #8f8f8f;
+    display: inline-block;
+    cursor: pointer;
+    color: #8f8f8f;
+    font-size: 20px;
+    padding-left: 8px;
+    padding-right: 8px;
+    text-decoration: none;
+}
+
 #save_btn {
-    margin-top:20px;
-    position:relative;
+    margin-top: 10px;
+    margin-bottom:20px;
     background-color: #fcd121;
     color: rgb(255, 255, 255);
     text-align: center;
@@ -350,37 +277,3 @@ span {
     border-radius: 10px;
     cursor: pointer;
 }
-
-.addMinus {
-    position: relative;
-    display: inline-flex;
-}
-
-.add {
-    display:inline-block;
-    text-decoration:none;
-    color:#8f8f8f;
-    text-align: center;
-    margin-right:5px;
-    border-radius:100px;
-    border: 1px solid #8f8f8f;
-    outline-style: none;
-    vertical-align:middle;
-    background-color: rgb(255, 255, 255);
-    cursor: pointer;
-}
-
-.minus {
-    display:inline-block;
-    text-decoration:none;
-    color:#8f8f8f;
-    text-align: center;
-    margin-left:5px;
-    border-radius:100px;
-    border: 1px solid #8f8f8f;
-    outline-style: none;
-    vertical-align:middle;
-    background-color: rgb(255, 255, 255);
-    cursor: pointer;
-}
-
