버튼 hover 추가 및 + - 버튼 수정

--- a/Making.css
+++ b/Making.css
@@ -43,14 +43,6 @@ a:active {
     outline-style: none;
 }
 
-.item1 button {
-    border: none !important;
-    background-color: transparent !important;
-    cursor: pointer;
-    color: rgb(255, 255, 255);
-    font-size: 20px;
-}
-
 #title::placeholder {
     color: rgb(255, 255, 255);
 }
@@ -210,7 +202,7 @@ ul {
 
 /* 화면 너비 0 ~ 768px */
 @media (max-width : 780px) {
-    .item1 button {
+    .item1 {
         font-size : 18px;
     }
 
@@ -284,4 +276,8 @@ ul {
     outline-style: none;
     border-radius: 10px;
     cursor: pointer;
+}
+
+#save_btn:hover {
+    background-color: #f7c500;
 }
