--- a/Making.css
+++ b/Making.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0 auto;
+}
+
+*:not(.add):not(.minus){
+    font-family: 'Nanum Gothic', sans-serif;
 }
 
 /* header */
